syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = ".;proto";

service Goods{
  //商品接口
  rpc GoodsList(GoodsFilterRequest) returns (GoodsListResponse);
  //现在用户提交订单有多个商品，你得批量查询商品的信息吧
  rpc BatchGetGoods(BatchGoodsIdInfo) returns (GoodsListResponse); //批量获取商品信息
  rpc CreateGoods(CreateGoodsInfo) returns (GoodsInfoResponse);
  rpc DeleteGoods(DeleteGoodsInfo) returns (google.protobuf.Empty);
  rpc UpdateGoods(CreateGoodsInfo) returns (google.protobuf.Empty);
  rpc UpdateGoodsStatus(GoodsStatusInfo) returns(google.protobuf.Empty);
  rpc GetGoodsDetail(GoodsInfoRequest) returns (GoodsInfoResponse);

  //商品分类
  rpc GetAllCategoryList(google.protobuf.Empty) returns (CategoryListResponse); //获取所有的分类
  //获取子分类
  rpc GetSubCategory(CategoryListRequest) returns (SubCategoryListResponse);
  rpc CreateCategory(CategoryInfoRequest) returns (CategoryInfoResponse); //新建分类信息
  rpc DeleteCategory(DeleteCategoryRequest) returns (google.protobuf.Empty); //删除分类
  rpc UpdateCategory(CategoryInfoRequest) returns (google.protobuf.Empty); //修改分类信息

  //品牌和轮播图
  rpc BrandList(BrandFilterRequest) returns (BrandListResponse); //批量获取品牌信息
  rpc CreateBrand(BrandRequest) returns (BrandInfoResponse); //新建品牌信息
  rpc DeleteBrand(BrandRequest) returns (google.protobuf.Empty); //删除品牌
  rpc UpdateBrand(BrandRequest) returns (google.protobuf.Empty); //修改品牌信息

  //轮播图
  rpc BannerList(google.protobuf.Empty) returns(BannerListResponse); //获取轮播列表信息
  rpc CreateBanner(BannerRequest) returns(BannerResponse); //添加banner图
  rpc DeleteBanner(BannerRequest) returns(google.protobuf.Empty); //删除轮播图
  rpc UpdateBanner(BannerRequest) returns(google.protobuf.Empty); //修改轮播图

  //品牌分类
  rpc CategoryBrandList(CategoryBrandFilterRequest) returns(CategoryBrandListResponse); //获取轮播列表信息
  //通过category获取brands
  rpc GetCategoryBrandList(CategoryInfoRequest) returns(BrandListResponse);
  rpc CreateCategoryBrand(CategoryBrandRequest) returns(CategoryBrandResponse); //添加banner图
  rpc DeleteCategoryBrand(CategoryBrandRequest) returns(google.protobuf.Empty); //删除轮播图
  rpc UpdateCategoryBrand(CategoryBrandRequest) returns(google.protobuf.Empty); //修改轮播图
}

message CategoryListRequest {
  int64 id = 1;
  int32 level = 2;
}


message CategoryInfoRequest {
  int64 id = 1;
  string name = 2;
  int64 parentCategory = 3;
  int32 level = 4;
  bool isTab = 5;
}


message DeleteCategoryRequest {
  int64 id = 1;
}

message QueryCategoryRequest {
  int64 id = 1;
  string name = 2;
}

message CategoryInfoResponse {
  int64 id = 1;
  string name = 2;
  int64 parentCategory = 3;
  int32 level = 4;
  bool isTab = 5;
}

message CategoryListResponse {
  int32 total = 1;
  repeated CategoryInfoResponse data = 2;
  string jsonData = 3;
}

message SubCategoryListResponse {
  int32 total = 1;
  CategoryInfoResponse info = 2;
  repeated CategoryInfoResponse subCategorys = 3;
}



message CategoryBrandFilterRequest  {
  int32 page = 1;
  int32 perSize = 2;
}

message FilterRequest  {
  int32 page = 1;
  int32 perSize = 2;
}

message CategoryBrandRequest{
  int64 id = 1;
  int64 categoryId = 2;
  int64 brandId = 3;
}
message CategoryBrandResponse{
  int64 id = 1;
  BrandInfoResponse brand = 2;
  CategoryInfoResponse category = 3;
}

message BannerRequest {
  int32 id = 1;
  int32 index = 2;
  string image = 3;
  string url = 4;
}

message BannerResponse {
  int32 id = 1;
  int32 index = 2;
  string image = 3;
  string url = 4;
}

message BrandFilterRequest {
  int32 page = 1;
  int32 perSize = 2;
}

message BrandRequest {
  int64 id = 1;
  string name = 2;
  string logo = 3;
}

message BrandInfoResponse {
  int64 id = 1;
  string name = 2;
  string logo = 3;
}

message BrandListResponse {
  int32 total = 1;
  repeated BrandInfoResponse data = 2;
}

message BannerListResponse {
  int32 total = 1;
  repeated BannerResponse data = 2;
}

message CategoryBrandListResponse {
  int32 total = 1;
  repeated CategoryBrandResponse data = 2;
}

message BatchGoodsIdInfo {
  repeated int64 id = 1;
}

message DeleteGoodsInfo {
  int64 id = 1;
}

message CategoryBriefInfoResponse {
  int64 id = 1;
  string name = 2;
}

message CategoryFilterRequest {
  int64 id = 1;
  bool  isTab = 2;
}

message GoodsInfoRequest {
  int64 id = 1;
}

message CreateGoodsInfo {
  int64 id = 1;
  string name = 2;
  string goodsSn = 3;
  int32 stocks = 7; //库存，
  float marketPrice = 8;
  float shopPrice = 9;
  string goodsBrief = 10;
  string goodsDesc = 11;
  bool shipFree = 12;
  repeated string images = 13;
  repeated string descImages = 14;
  string goodsFrontImage = 15;
  bool isNew = 16;
  bool isHot = 17;
  bool onSale = 18;
  int64 categoryId = 19;
  int64 brandId = 20;
}

message GoodsStatusInfo {
  int64 id = 1;
  bool isNew = 2;
  bool isHot = 3;
  bool OnSale = 4;
}

message GoodsReduceRequest {
  int64 goodsId = 1;
  int32 nums = 2;
}

message BatchCategoryInfoRequest {
  repeated int64 id = 1;
  int32 goodsNums = 2;
  int32 brandNums = 3;
}

message GoodsFilterRequest  {
  int32 priceMin = 1;
  int32 priceMax = 2;
  bool  isHot = 3;
  bool  isNew = 4;
  bool  isTab = 5;
  int64 topCategory = 6;
  int32 page = 7;
  int32 perSize = 8;
  string keyWords = 9;
  int64 brand = 10;
}


message GoodsInfoResponse {
  int64 id = 1;
  int64 categoryId = 2;
  string name = 3;
  string goodsSn = 4;
  int32 clickNum = 5;
  int32 soldNum = 6;
  int32 favNum = 7;
  float marketPrice = 9;
  float shopPrice = 10;
  string goodsBrief = 11;
  bool shipFree = 12;
  repeated string images = 13;
  repeated string descImages = 14;
  string goodsFrontImage = 15;
  bool isNew = 16;
  bool isHot = 17;
  bool onSale = 18;
  int64 addTime = 19;
  CategoryBriefInfoResponse category = 20;
  BrandInfoResponse brand = 21;
}

message GoodsListResponse {
  int32 total = 1;
  repeated GoodsInfoResponse data = 2;
}
